--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
     <main>
       <h1>Gallery</h1>
       <hr>
-      <section class="gallery">
+      <section class="gallerypage">
       <figure class="gallery">
         <!-- The <img><img> is the image file. In src="../images/" put the image name. In alt="" put a description. Between <figcaption><figcaption> put the image caption -->
         <img src="images/rowland.JPG" alt="Rowland holding a skeleton" />
@@ -76,3 +76,4 @@
     </footer>
   </body>
 </html>
+
