--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <div class="container">
           <figure>
             <img src="images/rebecca.JPG" alt="Rebecca holding a coin" />
+            <hr>
             <figcaption>
-              <hr />
-              Rebecca in New Orleans
+              Rebecca holding a coin
             </figcaption>
           </figure>
         </div>
@@ -58,9 +58,16 @@
               src="images/rowland.JPG"
               alt="Rowland holding up a fish skeleton"
             />
+            <hr>
             <figcaption>
-              <hr />
-              Rowland out fishing
+              Rowland holding a skeleton
+            </figcaption>
+          </figure>
+           <figure>
+            <img src="images/amanda.png" alt="Amanda holding a big backpack giving two thumbs up" />
+            <hr>
+            <figcaption>
+              Amanda holding a big backpack
             </figcaption>
           </figure>
         </div>
