--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
               Rowland holding a skeleton
             </figcaption>
           </figure>
+        </div>
+        <div class="container">
            <figure>
             <img src="images/amanda.png" alt="Amanda holding a big backpack giving two thumbs up" />
             <hr>
