--- a/index.html
+++ b/index.html
@@ -43,17 +43,14 @@
       </p>
       <br />
       <section class="photos">
-        <div class="container">
-          <figure>
+          <figure class="container">
             <img src="images/rebecca.JPG" alt="Rebecca holding a coin" />
             <hr>
             <figcaption>
               Rebecca holding a coin
             </figcaption>
           </figure>
-        </div>
-        <div class="container">
-          <figure>
+          <figure class="container">
             <img
               src="images/rowland.JPG"
               alt="Rowland holding up a fish skeleton"
@@ -63,16 +60,13 @@
               Rowland holding a skeleton
             </figcaption>
           </figure>
-        </div>
-        <div class="container">
-           <figure>
+           <figure class="container"> 
             <img src="images/amanda.png" alt="Amanda holding a big backpack giving two thumbs up" />
             <hr>
             <figcaption>
               Amanda holding a big backpack
             </figcaption>
           </figure>
-        </div>
       </section>
     </main>
     <br />
