--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <header>
-      <div class="container" id="logo">
-        <img src="images/iberia.jpg" alt="The Iberian Peninsula" />
-      </div>
+      <img src="images/iberia.jpg" alt="The Iberian Peninsula" id="logo"/>
       <div id="title">
         <p>
           <strong
