--- a/gallery.html
+++ b/gallery.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="container" id="logo">
-        <img src="../images/iberia.jpg" alt="The Iberian Peninsula" />
-      </div>
+      <img src="images/iberia.jpg" alt="The Iberian Peninsula" id="logo"/>
       <div id="title">
         <p>
           <strong
@@ -60,6 +58,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
